--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,13 +15,13 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".infoActivity"
+            android:name=".InfoActivity"
             android:exported="false" />
         <activity
-            android:name=".panelActivity"
+            android:name=".PanelActivity"
             android:exported="false" />
         <activity
-            android:name=".conexionActivity"
+            android:name=".ConexionActivity"
             android:exported="false" />
         <activity
             android:name=".MenuActivity"
