--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'com.github.jose-jhr:blueJhrLibrary:0.1.0'
+    implementation "androidx.activity:activity-ktx:1.3.0"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
