--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.github.jose-jhr:blueJhrLibrary:0.1.0'
     implementation "androidx.activity:activity-ktx:1.3.0"
     implementation 'androidx.appcompat:appcompat:1.4.1'
